Fixed scrollbar error, added file open button

--- a/standard.css
+++ b/standard.css
@@ -55,9 +55,7 @@ html {
 
 #assembleSubmit {
 	width:100%;
-	font-size: 0.8em;
-	height:2.5em;
-	line-height: 2.5em;
+	height:100%;
 	display:block;
 }
 
@@ -194,30 +192,11 @@ processor-state {
 #fileInteractionContainer > * {
 	flex: 1 1 auto;
 }
-#saveFile {
+#saveFile, #loadFile {
 	width: 100%;
 }
-input#button{
-  height: 0px; 
-  width: 100%;
-}
-input#button:before {
-  content: 'Browse';
-  background: #FFF;
-  width: 100%;
-  height: 2em;
-  display: block;
-  text-align: center;
-  position: relative;
-  margin: 0;
-  margin: 0 5px;
-  left: -6px;
-  border: 1px solid #E0E0E0;
-  top: -1px;
-  line-height: 2em;
-  color: #B6B6B6;
-  padding-left: 5px;
-  display: block;
+#fileButton {
+  display: none;
 }
 
 #assembleContainer {
@@ -265,8 +244,4 @@ h2 {
 	left: 0;
 	right: 0;
 	text-align: center;
-}
-
-.display-none {
-	display:none;
 }
